# msb_ssis2sql

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yaml  conftest.py  justfile  pyproject.toml  run.bat  ssis-to-adf-conversion-plan.md  team-sprint.config.yaml
.github/workflows/: validation.yml
docs/: epic-1-batch-convert-tui.md  plan-batch-convert-tui.md  plan-extract-packages-pipeline.md  plan-final-agent-step-procs.md  plan-final-orch-only-main.md  plan-project-deployment-model.md  plan-tui-tabs.md  plan-tui-validation-runner.md  sprint-agent-step-procs.md  sprint-coverage-95.md  sprint-main-procs-orchestrator.md  sprint-orch-only-main.md  sprint-uv-migration.md  sprint-validation-framework.md
examples/: sales_etl.dtsx
examples/samples/: samples.sln
examples/samples/SSMS-Samples/: SSMS-Export-to-Excel.dtsx  SSMS-Import-from-Excel.dtsx  SSMS-Samples.database  SSMS-Samples.dtproj
examples/samples/Tutorial-Sample-1/: Tutorial-Sample-1.database  Tutorial-Sample-1.dtproj
msb_ssis2sql/: __init__.py  __main__.py  _naming.py  batch.py  cli.py  component_types.py  control_graph.py  dialect.py  errors.py  generator.py  graph.py  model.py  observability.py  parser.py  project.py  relation.py  sqltypes.py  tui.py  util.py  web.py
msb_ssis2sql/agent/: __init__.py  command_parser.py  extractor.py  manifest.py  model.py  yaml_emitter.py
msb_ssis2sql/expressions/: __init__.py  ast.py  lexer.py  parser.py  translator.py
msb_ssis2sql/transforms/: __init__.py  base.py  column_ops.py  conditional_split.py  context.py  destination.py  flow.py  registry.py  set_ops.py  source.py
ssis2sql/: __init__.py  __main__.py  cli.py  component_types.py  dialect.py  errors.py  generator.py  graph.py  model.py  observability.py  parser.py  relation.py  sqltypes.py  tui.py  util.py  web.py
ssis2sql/expressions/: __init__.py  ast.py  lexer.py  parser.py  translator.py
ssis2sql/transforms/: __init__.py  base.py  column_ops.py  conditional_split.py  destination.py  flow.py  grouping.py  lookup.py  registry.py  set_ops.py  source.py
tests/: test_agent_command_parser.py  test_agent_extractor.py  test_agent_manifest.py  test_agent_step_rewriter.py  test_agent_warnings_log.py  test_agent_yaml_determinism.py  test_batch.py  test_batch_main_first.py  test_batch_main_with_dataflow.py  test_batch_negative_paths.py  test_batch_no_children.py  test_batch_no_main.py  test_batch_proc_manifest.py  test_cli.py  test_cli_exit_codes.py  test_cli_extract_agent_jobs_proc_manifest.py  test_cli_extract_packages.py  test_component_types.py  test_connection_resolution.py  test_control_graph.py  test_convert_project.py  test_dialect.py  test_ept_path_references.py  test_expressions.py  test_generator.py  test_generator_determinism.py  test_generator_proc_name.py  test_graph.py  test_input_normalization.py  test_lexer.py  test_naming.py  test_observability.py  test_orchestrator_only_main.py  test_packages_extractor.py  test_parameter_declarations.py  test_parser.py  test_project.py  test_relation.py  test_sales_etl_conversion.py  test_sqltypes.py  (+17 more)
tests/fixtures/: agent_step_commands.json  sales_etl_baseline.sql
validation/: __init__.py  comparison.py  config.py  conftest.py  ledger.py  provisioning.py  reporting.py  sql_runner.py  sqlserver.py  static_checks.py  test_package_smoke.py  test_static.py  test_validation.py
validation/capture/: RUNBOOK.md  __init__.py  capture.ps1  capture.py
validation/tests/: __init__.py  conftest.py  test_capture.py  test_comparison.py  test_config.py  test_corpus.py  test_ledger.py  test_provisioning.py  test_sql_runner.py  test_sqlserver.py  test_static_checks.py
wheels/: aiohttp_jinja2-1.6-py3-none-any.whl  ast_serialize-0.5.0-cp39-abi3-win_amd64.whl  coverage-7.14.0-cp314-cp314-win_amd64.whl  identify-2.6.19-py2.py3-none-any.whl  librt-0.11.0-cp314-cp314-win_amd64.whl  mdit_py_plugins-0.6.1-py3-none-any.whl  pre_commit-4.6.0-py2.py3-none-any.whl  python_discovery-1.3.1-py3-none-any.whl  requirements.txt  sqlglot-30.8.0-py3-none-any.whl  textual-8.2.7-py3-none-any.whl  textual_serve-1.1.3-py3-none-any.whl
(+87 files in other folders)
