[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssis2sql"
version = "0.1.0"
description = "Convert SSIS data-flow transformations into consolidated, behaviour-equivalent T-SQL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Linus McManamey" }]
keywords = ["ssis", "dtsx", "etl", "t-sql", "sql-server", "transpiler"]
dependencies = ["loguru>=0.7", "textual>=8.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=1.3"]

[project.scripts]
ssis2sql = "ssis2sql.cli:main"

[tool.setuptools.packages.find]
include = ["ssis2sql*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ssis2sql"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
