[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "msb_ssis2sql"
version = "0.1.0"
description = "Convert SSIS data-flow transformations into consolidated, behaviour-equivalent T-SQL."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Linus McManamey" }]
keywords = ["ssis", "dtsx", "etl", "t-sql", "sql-server", "transpiler"]
dependencies = [
    "loguru>=0.7",
    "pre-commit>=4.6.0",
    "pyodbc>=5.3",
    "pyyaml>=6.0",
    "textual>=8.2",
]

[project.scripts]
msb_ssis2sql = "msb_ssis2sql.cli:main"
msb_ssis2sql-web = "msb_ssis2sql.web:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.5",
    "mypy>=1.10",
]
web = ["textual-serve>=1.1"]
validation = [
    "pandas>=3.0",
    "pyarrow>=24.0",
    "sqlglot>=25.0",
    "python-dotenv>=1.0",
]

[tool.uv]
default-groups = ["dev", "web", "validation"]

[tool.setuptools.packages.find]
include = ["msb_ssis2sql*", "validation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "validation: differential validation (needs SQL Server)",
    "agent_smoke: live SQL Server smoke test for agent extractor (manual, not in CI)",
    "package_smoke: live SQL Server smoke test for package extractor (manual, not in CI)",
]

[tool.coverage.run]
omit = ["validation/tests/*", "validation/test_*.py", "validation/conftest.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "pyodbc", "pyodbc.*", "yaml", "yaml.*"]
ignore_missing_imports = true
